// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton accessibility > { name: 'CartSkeleton', renderCase: [Function renderCase] } renders loading role with sr-only text 1`] = `
<div
  class="space-y-4"
  role="status"
>
  <span
    class="sr-only"
  >
    Memuat...
  </span>
  <div
    class="flex items-center gap-4 rounded-lg border border-border/60 bg-muted/20 p-4"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim bg-muted/50 h-16 w-16 rounded-md"
    />
    <div
      class="flex-1 space-y-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-2/3"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-1/2"
      />
    </div>
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-16"
    />
  </div>
  <div
    class="flex items-center gap-4 rounded-lg border border-border/60 bg-muted/20 p-4"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim bg-muted/50 h-16 w-16 rounded-md"
    />
    <div
      class="flex-1 space-y-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-2/3"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-1/2"
      />
    </div>
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-16"
    />
  </div>
  <div
    class="flex items-center gap-4 rounded-lg border border-border/60 bg-muted/20 p-4"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim bg-muted/50 h-16 w-16 rounded-md"
    />
    <div
      class="flex-1 space-y-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-2/3"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-1/2"
      />
    </div>
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-16"
    />
  </div>
  <div
    class="flex justify-end"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-12 w-48"
    />
  </div>
</div>
`;

exports[`Skeleton accessibility > { name: 'CheckoutSkeleton', renderCase: [Function renderCase] } renders loading role with sr-only text 1`] = `
<div
  class="grid gap-8 lg:grid-cols-[minmax(0,2fr)_minmax(0,1fr)]"
  role="status"
>
  <span
    class="sr-only"
  >
    Memuat...
  </span>
  <div
    class="space-y-6 rounded-lg border border-border/60 bg-muted/20 p-6"
  >
    <div
      class="space-y-4"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-6 w-1/3"
      />
      <div
        class="space-y-3"
      >
        <div
          aria-hidden="true"
          class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
        />
        <div
          aria-hidden="true"
          class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
        />
        <div
          aria-hidden="true"
          class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
        />
        <div
          aria-hidden="true"
          class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-6 w-1/3"
      />
      <div
        class="space-y-3"
      >
        <div
          aria-hidden="true"
          class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
        />
        <div
          aria-hidden="true"
          class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
        />
        <div
          aria-hidden="true"
          class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-12 w-48"
    />
  </div>
  <div
    class="space-y-4 rounded-lg border border-border/60 bg-muted/20 p-6"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-6 w-1/2"
    />
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-full"
    />
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-full"
    />
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-full"
    />
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-full"
    />
    <div
      class="space-y-2 pt-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-2/3"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-10 w-full"
      />
    </div>
  </div>
</div>
`;

exports[`Skeleton accessibility > { name: 'OrdersTableSkeleton', renderCase: [Function renderCase] } renders loading role with sr-only text 1`] = `
<div
  class="overflow-hidden rounded-lg border"
  role="status"
>
  <span
    class="sr-only"
  >
    Memuat...
  </span>
  <table
    class="min-w-full divide-y divide-border/60"
  >
    <thead
      class="bg-muted/30"
    >
      <tr>
        <th
          class="px-4 py-3 text-left text-sm font-medium text-muted-foreground"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-20"
          />
        </th>
        <th
          class="px-4 py-3 text-left text-sm font-medium text-muted-foreground"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-20"
          />
        </th>
        <th
          class="px-4 py-3 text-left text-sm font-medium text-muted-foreground"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-20"
          />
        </th>
        <th
          class="px-4 py-3 text-left text-sm font-medium text-muted-foreground"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-20"
          />
        </th>
      </tr>
    </thead>
    <tbody
      class="divide-y divide-border/60 bg-background"
    >
      <tr
        class="bg-background"
      >
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
      </tr>
      <tr
        class="bg-background"
      >
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
      </tr>
      <tr
        class="bg-background"
      >
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
      </tr>
      <tr
        class="bg-background"
      >
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
        <td
          class="px-4 py-3"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-24"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Skeleton accessibility > { name: 'ProductCardSkeleton', renderCase: [Function renderCase] } renders loading role with sr-only text 1`] = `
<div
  class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
  role="status"
>
  <span
    class="sr-only"
  >
    Memuat...
  </span>
  <div
    class="flex flex-col gap-4 rounded-lg border border-border/60 bg-muted/20 p-4"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 aspect-video w-full"
    />
    <div
      class="space-y-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-3/4"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-1/2"
      />
    </div>
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 mt-auto h-10 w-full"
    />
  </div>
  <div
    class="flex flex-col gap-4 rounded-lg border border-border/60 bg-muted/20 p-4"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 aspect-video w-full"
    />
    <div
      class="space-y-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-3/4"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-1/2"
      />
    </div>
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 mt-auto h-10 w-full"
    />
  </div>
</div>
`;

exports[`Skeleton accessibility > { name: 'ProductDetailSkeleton', renderCase: [Function renderCase] } renders loading role with sr-only text 1`] = `
<div
  class="grid gap-10 lg:grid-cols-[minmax(0,1.1fr)_minmax(0,1fr)]"
  role="status"
>
  <span
    class="sr-only"
  >
    Memuat...
  </span>
  <div
    class="flex items-center justify-center rounded-lg border border-border/60 bg-muted/20 p-6"
  >
    <div
      aria-hidden="true"
      class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 aspect-square w-full max-w-xl"
    />
  </div>
  <div
    class="flex flex-col gap-6"
  >
    <div
      class="space-y-3"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-8 w-3/4"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-6 w-1/3"
      />
    </div>
    <div
      class="space-y-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-full"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-5/6"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-2/3"
      />
    </div>
    <div
      class="space-y-2"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-1/2"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-4 w-1/3"
      />
    </div>
    <div
      class="flex flex-col gap-4 sm:flex-row"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-12 w-full sm:w-40"
      />
      <div
        aria-hidden="true"
        class="pointer-events-none animate-pulse prm:no-anim rounded bg-muted/50 h-12 w-full sm:w-40"
      />
    </div>
  </div>
</div>
`;
